# libibackup

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  config.h  configure.ac
.github/workflows/: ci.yaml.yml
include/: Makefile.am
include/libibackup/: libibackup.h
src/: Makefile.am  libibackup-1.0.pc.in  libibackup.c  libibackup.h  sha.c  sha.h
tools/: Makefile.am  ibackup_extract  ibackup_extract.c  ibackup_list.c
